--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@microsoft/sp-webpart-base": "1.11.0",
     "@pnp/graph": "^2.10.0",
     "@pnp/sp": "^2.10.0",
+    "lodash": "^4.17.21",
     "react": "^16.8.5",
     "react-dom": "^16.8.5"
   },
