--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@pnp/graph": "^2.10.0",
     "@pnp/sp": "^2.10.0",
     "lodash": "^4.17.21",
+    "office-ui-fabric-react": "^6.214.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5"
   },
