--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serve": "gulp bundle --custom-serve --max_old_space_size=4096 && fast-serve"
   },
   "dependencies": {
+    "@fluentui/react": "^8.37.6",
     "@microsoft/sp-core-library": "1.11.0",
     "@microsoft/sp-lodash-subset": "1.11.0",
     "@microsoft/sp-office-ui-fabric-core": "1.11.0",
@@ -21,9 +22,9 @@
     "@pnp/graph": "^2.10.0",
     "@pnp/sp": "^2.10.0",
     "lodash": "^4.17.21",
+    "office-ui-fabric-react": "6.214.0",
     "react": "16.8.5",
-    "react-dom": "16.8.5",
-    "office-ui-fabric-react": "6.214.0"
+    "react-dom": "16.8.5"
   },
   "devDependencies": {
     "@microsoft/rush-stack-compiler-3.3": "0.3.5",
